--- a/meituan/package.json
+++ b/meituan/package.json
@@ -7,8 +7,10 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "16.0.0-alpha.6",
-		"react-native": "0.44.0"
+		 "react": "~15.4.1",
+		  "react-native": "0.42.3",
+    "react-native-router-flux": "3.38.0",
+    "react-native-scrollable-tab-view": "0.6.3"
 ,
   "react-native-router-flux": "3.38.0",
     "react-native-scrollable-tab-view": "0.6.3"	},
