--- a/meituan/package.json
+++ b/meituan/package.json
@@ -1,26 +1,26 @@
 {
-	"name": "meituan",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
-		 "react": "~15.4.1",
-		  "react-native": "0.42.3",
+  "name": "meituan",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "react": "~15.4.1",
+    "react-native": "0.42.3",
     "react-native-router-flux": "3.38.0",
-    "react-native-scrollable-tab-view": "0.6.3"
-,
-  "react-native-router-flux": "3.38.0",
-    "react-native-scrollable-tab-view": "0.6.3"	},
-	"devDependencies": {
-		"babel-jest": "20.0.0",
-		"babel-preset-react-native": "1.9.1",
-		"jest": "20.0.0",
-		"react-test-renderer": "16.0.0-alpha.6"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+    "react-native-scrollable-tab-view": "0.6.3",
+    "react-native-swiper": "^1.5.4"
+  },
+  "devDependencies": {
+    "babel-jest": "19.0.0",
+    "babel-preset-react-native": "1.9.1",
+    "flow-bin": "^0.44.2",
+    "jest": "19.0.2",
+    "react-test-renderer": "~15.4.1"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
